--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,6 +5,8 @@ platform :ios, '9.0'
 target 'BeeKit_Example' do
   pod 'BeeKit-Swift', :path => '../'
   pod 'SnapKit'
+  
+  pod 'CatalogByConvention'
 
   target 'BeeKit_Tests' do
     inherit! :search_paths
